# benchmarks

./: .gitmodules
chinese_checkers/: CMakeLists.txt  Instructions.txt  benchmark_1.sh  benchmark_2.sh  notes.txt  requirements.txt  requirements_gpu.txt
chinese_checkers/cc/: CCEndgameData.cpp  CCEndgameData.h  CCRankings.cpp  CCRankings.h  CCSeparation.cpp  CCSeparation.h  CCUtils.cpp  CCUtils.h  CCheckers.cpp  CCheckers.h  CMakeLists.txt
chinese_checkers/competition/: Driver.cpp  Driver.h
chinese_checkers/game/: CMakeLists.txt  Driver.cpp
chinese_checkers/other/: MTest.cpp  QTest.cpp  SADP.cpp  TMTest.cpp  ThreadTest.cpp  main.cpp  test_proofTree.cpp  test_ranking.cpp  test_sas.cpp  test_utils.cpp  test_utils.h
chinese_checkers/players/: CMakeLists.txt  DBEval.cpp  DBEval.h  DBPlusEval.cpp  DBPlusEval.h  DistDBEval.cpp  DistDBEval.h  DistEval.cpp  DistEval.h  LBDistEval.cpp  LBDistEval.h  Minimax.cpp  Minimax.h  MinimaxDB.h  Player.cpp  Player.h  TDRegression.cpp  TDRegression.h  TDRegression2.cpp  TDRegression2.h  UCB.cpp  UCB.h  UCT.cpp  UCT.h  UCTDB.h
chinese_checkers/python2/: CMakeLists.txt  ccwrapper.cpp  self_play.py
chinese_checkers/solve/: BackwardBitSolver.h  BackwardSolver.cpp  BackwardSolver.h  BaselineSolver.cpp  BaselineSolver.h  CMakeLists.txt  CacheFriendlySolver.cpp  CacheFriendlySolver.h  EMOldSolver.cpp  EMOldSolver.h  EMSolver.cpp  EMSolver.h  FasterSymmetrySolver.cpp  FasterSymmetrySolver.h  ForwardSolver.cpp  ForwardSolver.h  FullSymmetrySolver.cpp  FullSymmetrySolver.h  HybridBitSolver.cpp  HybridBitSolver.h  InitialParallelSolver.cpp  (+15 more)
(+354 files in other folders)
